--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,22 @@
 			<version>2.0.7</version>
 		</dependency>
 
+		<!-- 파일 업로드 -->
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<!--	commons io 로 검색	-->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.17.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<!--	fileupload 로 검색	-->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.5</version>
+		</dependency>
+
 
 		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
 		<dependency>
